# radiatedPowerPackages

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: CI.yml
Antennas/: AntennaArray.cxx  AntennaArray.h  CMakeLists.txt  HalfWaveDipole.cxx  HertzianDipole.cxx  IAntenna.cxx  IAntenna.h  IsotropicAntenna.cxx  IsotropicAntenna.h  PatchAntenna.cxx  Point.cxx  Point.h
BasicFunctions/: BasicFunctions.cxx  BasicFunctions.h  ButterworthFilter.cxx  ButterworthFilter.h  CMakeLists.txt  ComplexVector3.cxx  ComplexVector3.h  Constants.h  EMFunctions.h  FFTWComplex.cxx  FFTWComplex.h  FourierTransforms.cxx  FourierTransforms.h
ElectronDynamics/: BaseField.cxx  BaseField.h  BorisSolver.cxx  BorisSolver.h  CMakeLists.txt  ComsolFields.h  ManyParticleSolver.cxx  ManyParticleSolver.h  Particle.cxx  Particle.h  PenningTraps.cxx  PenningTraps.h  QTNMFields.cxx  QTNMFields.h  TrajectoryGen.cxx  TrajectoryGen.h
EventGeneration/: BasicTritiumSpectrum.cxx  BasicTritiumSpectrum.h  CMakeLists.txt  Event.cxx  Event.h  FieldStorer.cxx  FieldStorer.h  ITritiumSpectrum.cxx  ITritiumSpectrum.h  OutputVars.h  ParticleState.cxx  ParticleState.h  SignalStorer.cxx  SignalStorer.h
FieldClasses/: CMakeLists.txt  FieldClasses.cxx  FieldClasses.h
Scattering/: BaseScatter.cxx  BaseScatter.h  CMakeLists.txt  ElasticScatter.cxx  ElasticScatter.h  InelasticScatter.cxx  InelasticScatter.h
SignalProcessing/: CMakeLists.txt  Signal.cxx  Signal.h  SignalQuick.cxx  SignalQuick.h
Waveguides/: CMakeLists.txt  CircularCavity.cxx  CircularCavity.h  CircularWaveguide.cxx  CircularWaveguide.h  ICavity.cxx  ICavity.h  IWaveguide.cxx  IWaveguide.h  Probe.cxx  Probe.h  RectangularWaveguide.cxx  RectangularWaveguide.h  WaveguideMode.cxx  WaveguideMode.h
executables/: AxialFreqPT.cxx  CMakeLists.txt  CRESDA0Cavity.cxx  CavityFieldAmps.cxx  DemonstrateEventGeneration.cxx  EventGenWithScattering.cxx  EventGenWithScatteringBathtub.cxx  EventRate.cxx  FakeTrackGen.cxx  FourCoilEnergyRes.cxx  G4InputTest.cxx  GenerateAtPitchAngle.cxx  HelmholtzCoils.cxx  LargeVolumeCavityP8.cxx  LeeWhitingCoils.cxx  LongTimeGeneration.cxx  MLSampleGeneration.cxx  NicePenningTraj.cxx  P8HarmonicTrap.cxx  P8WaveguidePower.cxx  PenningTrapTraj.cxx  PhasedArrayVariableField.cxx  PlotRuddXSecs.cxx  PlotXSecs.cxx  Project8CCA.cxx  RFBandwidth.cxx  RFBandwidthCRESDA.cxx  RadialEnergyResolution.cxx  RealisticFields.cxx  ScatteringCheck.cxx  SecondaryElectronProduction.cxx  SignalFromWaveguide.cxx  SignalRequirements.cxx  SingleAntennaPower.cxx  StartPositionPT.cxx  SyntheticSignals.cxx  TemplateGeneration.cxx  TestWgTheory.cxx  TrapCoilTuning.cxx  TwoElectronSim.cxx  (+14 more)
test/: CMakeLists.txt  crossSectionTestPlots.py  testWaveguide.cxx  testXSecs.cxx  waveguideTestPlots.py
